Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4(EOL), 10.5(EOL), 10.6(EOL), 10.11, 11.4
Description
In the function btr_blob_free() there is an unnecessary lookup of buf_pool.page_hash. If we acquired an additional buffer-fix on the page before mtr_t::commit() and released it after acquiring buf_pool.mutex, we would know that the page still exists in the buffer pool and can be attempted to be freed, without having to look it up in buf_pool.page_hash again.
There could be similar suboptimal patterns elsewhere as well.
Attachments
Issue Links
- relates to
-
MDEV-33966 sysbench performance regression with concurrent workloads
-
- Stalled
-
-
MDEV-34791 Redundant page lookups hurt performance
-
- Closed
-